Fixing broken style.css and making search box nicer

--- a/streetart/static/streetart/css/style.css
+++ b/streetart/static/streetart/css/style.css
@@ -111,7 +111,7 @@ body {
 
 a {
     cursor: pointer;
-    color: yellow;
+    color: #ffe000;
 }
 
 .main {
@@ -119,7 +119,7 @@ a {
 }
 
 .yellow-submit-btn {
-    background-color: yellow;
+    background-color: #ffe000;
     padding: 10px 25px;
     border-radius: 10px;
     text-align: center;
@@ -231,7 +231,7 @@ a {
 }
 
 .navbar-dropdown li:hover {
-    background-color: yellow;
+    background-color: #ffe000;
     color: black;
 }
 
@@ -288,7 +288,7 @@ a {
 }
 
 .navbar-nav>li>a:focus, .navbar-nav>li>a:hover {
-    color: yellow;
+    color: #ffe000;
     background-color: unset;
 }
 
@@ -399,7 +399,7 @@ a {
     -ms-transform: rotate(-90deg) translateX(-100%);
     -webkit-transform: rotate(-90deg) translateX(-100%);
     transform: rotate(-90deg) translateX(-100%);
-    background-color: yellow;
+    background-color: #ffe000;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     font-size: 20px;
@@ -422,13 +422,13 @@ a {
   left: -20px;
   border-bottom-right-radius: 10px;
   border-width: 0 1px 1px 0;
-  box-shadow: 6px 2px 0 yellow;
+  box-shadow: 6px 2px 0 #ffe000;
 }
 .left-panel-toggle:after {
   right: -20px;
   border-bottom-left-radius: 10px;
   border-width: 0 0 1px 1px;
-  box-shadow: -6px 2px 0 yellow;
+  box-shadow: -6px 2px 0 #ffe000;
 }
 
 .left-panel-cont {
@@ -451,7 +451,7 @@ a {
     -ms-transform: rotate(90deg) translateX(100%);
     -webkit-transform: rotate(90deg) translateX(100%);
     transform: rotate(90deg) translateX(100%);
-    background-color: yellow;
+    background-color: #ffe000;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     font-size: 20px;
@@ -472,7 +472,7 @@ a {
     -ms-transform: rotate(-90deg) translateX(-100%);
     -webkit-transform: rotate(-90deg) translateX(-100%);
     transform: rotate(-90deg) translateX(-100%);
-    background-color: yellow;
+    background-color: #ffe000;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     font-size: 20px;
@@ -491,7 +491,7 @@ a {
     -ms-transform: rotate(-90deg) translateX(-100%);
     -webkit-transform: rotate(-90deg) translateX(-100%);
     transform: rotate(-90deg) translateX(-100%);
-    background-color: yellow;
+    background-color: #ffe000;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     font-size: 20px;
@@ -515,13 +515,13 @@ a {
   left: -20px;
   border-bottom-right-radius: 10px;
   border-width: 0 1px 1px 0;
-  box-shadow: 6px 2px 0 yellow;
+  box-shadow: 6px 2px 0 #ffe000;
 }
 .right-panel-toggle:after {
   right: -20px;
   border-bottom-left-radius: 10px;
   border-width: 0 0 1px 1px;
-  box-shadow: -6px 2px 0 yellow;
+  box-shadow: -6px 2px 0 #ffe000;
 }
 
 
@@ -564,7 +564,7 @@ a {
     height: 100%;
     width: calc(100% - 48px);
     border-left-width: 10px;
-    border-left-color: yellow;
+    border-left-color: #ffe000;
     border-left-style: solid;
     border-radius: 10px;
     position: relative;
@@ -590,7 +590,7 @@ a {
 
 .map-container .gm-svpc {
     z-index: 10;
-    background-color: yellow !important;
+    background-color: #ffe000 !important;
 }
 
 .map-container {
@@ -599,7 +599,7 @@ a {
 }
 
 .map-container button{
-    background-color: yellow !important;
+    background-color: #ffe000 !important;
 }
 
 .map-add {
@@ -609,7 +609,7 @@ a {
 }
 
 .search-input{
-    background-color: yellow;
+    background-color: #ffe000;
     border: none;
     color: black;
 }
@@ -622,7 +622,6 @@ a {
     right: 30px;
     font-size: 15px;
 }
-
 .selector-input {
     position: absolute;
     width: auto;
@@ -709,7 +708,6 @@ a {
     }
 }
 
-
 /*** Form buttons ***/
 .form-group .btn{
     width: 100%;
@@ -717,7 +715,7 @@ a {
 }
 
 .form-group .btn-primary{
-    background-color: #fff90d;
+    background-color: #ffe000;
     border-color: rgb(179, 176, 4);
     color: black;
 }
@@ -764,7 +762,7 @@ a {
     display: none;
     position: fixed;
     z-index: 1001;
-    background-color: yellow;
+    background-color: #ffe000;
     color: black;
     border-radius: 10px;
     padding-left: 20px;
@@ -854,18 +852,6 @@ a {
     display: inline-block;
 }
 
-.card .overlay-title {
-    position: absolute;
-    padding: 5px;
-    color: #fff;
-    font-size: 24px;
-    font-weight: 300;
-    margin-right: 40px;
-    z-index: 1;
-    background: rgb(0, 0, 0); /* fallback color */
-    background: rgba(0, 0, 0, 0.3);
-}
-
 .card-image .overlay-fullscreen {
     position: absolute;
     padding: 5px;
@@ -897,6 +883,21 @@ a {
     line-height: 1em;
     bottom: 0;
     right: 0;
+}
+
+.card-image .overlay-action{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.63);
+    border-radius: 3px;
+    margin: 2px;
+    padding: 2px 6px;
+}
+
+.card-image .overlay-action > span{
+    padding: 2px;
+    color: white;
 }
 
 .card-image.main-card-image {
@@ -986,6 +987,16 @@ a {
   padding-left: 16px;
 }
 
+.comments-header {
+    display: inline-block;
+    text-align: center;
+    color: white;
+}
+
+.comments-header > p {
+    font-size: 20px;
+}
+
 
 .nearest-artworks-header {
     display: inline-block;
@@ -995,7 +1006,7 @@ a {
     color: white;
 }
 
-.nearest-artworks-header>p {
+.nearest-artworks-header > p {
     font-size: 20px;
 }
 
@@ -1134,7 +1145,7 @@ a {
     width: 0;
     height: 0;
     border-left: 60px solid transparent;
-    border-top: 60px solid yellow;
+    border-top: 60px solid #ffe000;
 }
 
 .new-text {
@@ -1202,6 +1213,44 @@ a {
   padding-top: 50px;
 }
 
+.contribute-div .mw-wrap .mw-btn-add-marker {
+    padding: 6px 12px;
+}
+@media screen and (max-width: 590px) {
+    .contribute-div .mw-header {
+        height: 70px;
+    }
+
+    .contribute-div .mw-header .mw-adress-input-wrap {
+        float: left !important;
+        margin-top: 5px;
+    }
+    .contribute-div .mw-wrap{
+        min-width: unset;
+    }
+}
+@media screen and (max-width: 590px) {
+
+    .contribute-div .mw-header .mw-btn-add-marker{
+        margin-top: 5px;
+        margin-left: 4px;
+    }
+    .get-involved-title {
+        font-size: 60px;
+    }
+    .contribute-div h1{
+        font-size: 40px;
+    }
+}
+@media screen and (max-width: 318px) {
+    .contribute-div .mw-header {
+        height: 110px;
+    }
+    .contribute-div .mw-header .mw-btn-add-marker{
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+}
 /*** Settings Page ***/
 
 .settings-page {
@@ -1302,7 +1351,7 @@ a {
     border-radius: 2px;
     padding: 16px;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 50%;
     bottom: 30px;
     font-size: 17px;
@@ -1516,7 +1565,7 @@ form{
 }
 
 .yellow-donate-btn {
-    background-color: yellow;
+    background-color: #ffe000;
     width: 80px;
     padding: 10px 25px;
     border-radius: 10px;
